--- a/.github/stale-test.yml
+++ b/.github/stale-test.yml
@@ -21,6 +21,7 @@ name: 'Close stale issues'
 on:
   schedule:
     - cron: '*/5 * * * *'
+  workflow_dispatch :
 permissions:
   issues: write
   pull-requests: write
