--- a/.github/workflows/stale-pr.yml
+++ b/.github/workflows/stale-pr.yml
@@ -1,17 +1,45 @@
-name: "Close stale spull requests"
+# name: "Close stale spull requests"
+# on:
+#   schedule:
+#     - cron: "30 12 * * */1"  # arbitrary time not to DDOS GitHub
+
+# jobs:
+#   stale:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/stale@v3
+#         with:
+#           repo-token: ${{ secrets.GITHUB_TOKEN }}
+#           stale-pr-message: 'This PR was marked stale due to lack of activity. It will be closed in 7 days.'
+#           close-pr-message: 'Closed as inactive. Feel free to reopen if this PR is still being worked on.'
+#           exempt-pr-labels: 'release:after-ga'
+#           days-before-stale: 1
+#           days-before-close: 7
+name: 'Close stale issues and PRs'
 on:
+  workflow_dispatch:
   schedule:
-    - cron: "30 12 * * */1"  # arbitrary time not to DDOS GitHub
+    - cron: '55 16 * * *'
+
+permissions:
+  issues: write
 
 jobs:
   stale:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/stale@v3
+      - uses: actions/stale@v9
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          stale-pr-message: 'This PR was marked stale due to lack of activity. It will be closed in 7 days.'
-          close-pr-message: 'Closed as inactive. Feel free to reopen if this PR is still being worked on.'
-          exempt-pr-labels: 'release:after-ga'
-          days-before-stale: 1
-          days-before-close: 7
+          stale-issue-message: 'This is an automated message. Per our repo policy, stale issues get closed if there has been no activity in the past 28 days. The issue will be automatically closed in 14 days. If you wish to keep this issue open, please add a new comment.'
+          days-before-issue-stale: 0
+          days-before-pr-stale: -1
+          days-before-close: 14
+          operations-per-run: 2
+      - uses: actions/stale@v9
+        with:
+          stale-issue-message: "This is an automated message. Per our repo policy, stale issues get closed if there has been no activity in the past 60 days. The issue will be automatically closed in 14 days. If you wish to keep this issue open, please add a new comment."
+          close-issue-label: 'info:new-port-unresolved'
+          days-before-issue-stale: 0
+          days-before-pr-stale: -1
+          days-before-close: 14
+          operations-per-run: 2
