--- a/.github/workflows/stale-pr.yml
+++ b/.github/workflows/stale-pr.yml
@@ -5,9 +5,7 @@ on:
     - cron: '55 16 * * *'
 
 permissions:
-  contents: write
-  pull-requests: write
-  repository-projects: write
+  issues: write
 
 jobs:
   stale:
@@ -19,7 +17,7 @@ jobs:
           days-before-issue-stale: 0
           days-before-pr-stale: -1
           days-before-close: 14
-          operations-per-run: 2
+          #operations-per-run: 2
       - uses: actions/stale@v9
         with:
           stale-issue-message: "This is an automated message. Per our repo policy, stale issues get closed if there has been no activity in the past 60 days. The issue will be automatically closed in 14 days. If you wish to keep this issue open, please add a new comment."
@@ -27,4 +25,4 @@ jobs:
           days-before-issue-stale: 0
           days-before-pr-stale: -1
           days-before-close: 14
-          operations-per-run: 2
+          # operations-per-run: 2
