--- a/.github/workflows/setup-java-issue-test.yml
+++ b/.github/workflows/setup-java-issue-test.yml
@@ -1,6 +1,6 @@
 #testing the issue-678 (12)
 name: Java Installation Test
-workflow_dispatch:
+on: workflow_dispatch
 jobs:
   java-test:
     runs-on: ubuntu-latest
