--- a/.github/workflows/setup-java-issue-test.yml
+++ b/.github/workflows/setup-java-issue-test.yml
@@ -4,6 +4,7 @@ on: workflow_dispatch
 jobs:
   java-test:
     runs-on: ubuntu-latest
+    container: docker:cli
     steps:
       - name: Set up JDK
         uses: actions/setup-java@v4
@@ -12,4 +13,5 @@ jobs:
           java-version: 11
       - name: Execute Java
         run: apt list --installed
+  
     
