--- a/.github/workflows/setup-java-issue-test.yml
+++ b/.github/workflows/setup-java-issue-test.yml
@@ -12,5 +12,30 @@ jobs:
           java-version: 11
       - name: Execute Java
         run: apt list --installed
+
+  test-ubuntu:
+    runs-on: ubuntu-latest
+    container: ubuntu:latest
+    steps:
+      # - name: Install docker and docker-compose
+      #   run: |
+      #     apt -y update 
+      #     apt -y install sudo curl
+      #     curl -fsSL https://get.docker.com -o get-docker.sh
+      #     sudo sh ./get-docker.sh
+      #     apt-get install docker-compose-plugin
+      - name: Set up JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 11
+      - name: Execute Java
+        run: |
+          which java
+          type java
+          echo $JAVA_HOME
+          echo $PATH
+          java --help
+  
   
     
