--- a/.github/workflows/setup-java-issue-test.yml
+++ b/.github/workflows/setup-java-issue-test.yml
@@ -31,6 +31,7 @@ jobs:
           java-version: 11
       - name: Execute Java
         run: |
+          apt list --installed
           which java
           type java
           echo $JAVA_HOME
