--- a/.github/workflows/setup-java-issue-test.yml
+++ b/.github/workflows/setup-java-issue-test.yml
@@ -16,14 +16,14 @@ jobs:
   test-ubuntu:
     runs-on: ubuntu-latest
     container: ubuntu:latest
-      - name: Set up JDK
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 11
+      steps:
+        - name: Set up JDK
+          uses: actions/setup-java@v4
+          with:
+            distribution: temurin
+            java-version: 11
       - name: Execute Java
-        run: |
-          apt list --installed
+        run: apt list --installed
   
   
     
