--- a/.github/workflows/issue-678-setup-java.yml
+++ b/.github/workflows/issue-678-setup-java.yml
@@ -18,7 +18,7 @@ jobs:
     container: ubuntu:latest
     steps:
       - name: Execute Java
-        run: apt list --installed
+        run: java –version 
   
   
     
