--- a/.github/workflows/issue-678-setup-java.yml
+++ b/.github/workflows/issue-678-setup-java.yml
@@ -19,29 +19,29 @@ jobs:
           echo $PATH
           java --help
 
-  test-ubuntu:
-    runs-on: ubuntu-latest
-    container: ubuntu:latest
-    steps:
-      # - name: Install docker and docker-compose
-      #   run: |
-      #     apt -y update 
-      #     apt -y install sudo curl
-      #     curl -fsSL https://get.docker.com -o get-docker.sh
-      #     sudo sh ./get-docker.sh
-      #     apt-get install docker-compose-plugin
-      - name: Set up JDK
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 11
-      - name: Execute Java
-        run: |
-          which java
-          type java
-          echo $JAVA_HOME
-          echo $PATH
-          java --help
+  # test-ubuntu:
+  #   runs-on: ubuntu-latest
+  #   container: ubuntu:latest
+  #   steps:
+  #     - name: Install docker and docker-compose
+  #       run: |
+  #         apt -y update 
+  #         apt -y install sudo curl
+  #         curl -fsSL https://get.docker.com -o get-docker.sh
+  #         sudo sh ./get-docker.sh
+  #         apt-get install docker-compose-plugin
+  #     - name: Set up JDK
+  #       uses: actions/setup-java@v4
+  #       with:
+  #         distribution: temurin
+  #         java-version: 11
+  #     - name: Execute Java
+  #       run: |
+  #         which java
+  #         type java
+  #         echo $JAVA_HOME
+  #         echo $PATH
+  #         java --help
   
   
     
