--- a/.github/workflows/issue-678-setup-java.yml
+++ b/.github/workflows/issue-678-setup-java.yml
@@ -23,8 +23,18 @@ jobs:
     runs-on: ubuntu-latest
     container: ubuntu:latest
     steps:
-      - name: Check java version
-        run: java -version
+      - name: Install docker and docker-compose
+        run: |
+          apt -y update 
+          apt -y install sudo curl
+          curl -fsSL https://get.docker.com -o get-docker.sh
+          sudo sh ./get-docker.sh
+          apt-get install docker-compose-plugin
+      - name: Set up JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 11
       - name: Execute Java
         run: |
           which java
