--- a/.github/workflows/issue-678-setup-java.yml
+++ b/.github/workflows/issue-678-setup-java.yml
@@ -12,8 +12,9 @@ jobs:
           distribution: zulu
           java-version: 11
       - name: Execute Java
-        run: ls
-
+        run: |
+          cd /__t/Java_Zulu_jdk/11.0.25-9/x64
+          ls
   test-ubuntu:
     runs-on: ubuntu-latest
     container: ubuntu:latest
