--- a/.github/workflows/issue-678-setup-java.yml
+++ b/.github/workflows/issue-678-setup-java.yml
@@ -14,7 +14,8 @@ jobs:
       - name: Execute Java
         run: |
           cd /__t/Java_Zulu_jdk/11.0.25-9/x64
-          ls
+          export PATH="$PATH:$JAVA_HOME/bin"
+          echo PATH
   test-docker-2:
     runs-on: ubuntu-latest
     container: docker:cli
