--- a/.github/workflows/issue-678-setup-java.yml
+++ b/.github/workflows/issue-678-setup-java.yml
@@ -15,7 +15,7 @@ jobs:
         run: |
           cd /__t/Java_Zulu_jdk/11.0.25-9/x64
           export PATH="$PATH:$JAVA_HOME/bin"
-          echo PATH
+          echo $PATH
   test-docker-2:
     runs-on: ubuntu-latest
     container: docker:cli
