--- a/.github/workflows/issue-678-setup-java.yml
+++ b/.github/workflows/issue-678-setup-java.yml
@@ -13,9 +13,12 @@ jobs:
           java-version: 11
       - name: Execute Java
         run: |
-          cd /__t/Java_Zulu_jdk/11.0.25-9/x64
           export PATH="$PATH:$JAVA_HOME/bin"
+          which java
+          type java
+          echo $JAVA_HOME
           echo $PATH
+          java --help
   test-docker-2:
     runs-on: ubuntu-latest
     container: docker:cli
