--- a/.github/workflows/issue-678-setup-java.yml
+++ b/.github/workflows/issue-678-setup-java.yml
@@ -13,10 +13,11 @@ jobs:
           java-version: 11
       - name: Execute Java
         run: |
-          export PATH="$PATH:$JAVA_HOME/bin"
+          export PATH="$PATH:$JAVA_HOME_11_X64/bin"
           which java
           type java
           echo $JAVA_HOME
+          echo $JAVA_HOME_11_X64
           echo $PATH
           java --help
   test-docker-2:
@@ -29,7 +30,9 @@ jobs:
           distribution: zulu
           java-version: 11
       - name: Execute Java
-        run: ls
+        run: |
+          cd /__t/Java_Zulu_jdk/11.0.25-9/x64
+          ls
   test-ubuntu:
     runs-on: ubuntu-latest
     container: ubuntu:latest
