--- a/.github/workflows/issue-678-setup-java.yml
+++ b/.github/workflows/issue-678-setup-java.yml
@@ -13,11 +13,10 @@ jobs:
           java-version: 11
       - name: Execute Java
         run: |
-          export PATH="$PATH:$JAVA_HOME_11_X64/bin"
+          export PATH="$PATH:$JAVA_HOME/bin"
           which java
           type java
           echo $JAVA_HOME
-          echo $JAVA_HOME_11_X64
           echo $PATH
           java --help
   test-docker-2:
@@ -32,7 +31,7 @@ jobs:
       - name: Execute Java
         run: |
           cd /__t/Java_Zulu_jdk/11.0.25-9/x64
-          ls
+          cd /__t/Java_Zulu_jdk/11.0.25-9/x64/bin
   test-ubuntu:
     runs-on: ubuntu-latest
     container: ubuntu:latest
