--- a/.github/workflows/issue-678-setup-java.yml
+++ b/.github/workflows/issue-678-setup-java.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Execute Java
         run: |
           cd /__t/Java_Zulu_jdk/11.0.25-9/x64/bin
-          ls
+          java -version
   test-ubuntu:
     runs-on: ubuntu-latest
     container: ubuntu:latest
