--- a/.github/workflows/issue-678-setup-java.yml
+++ b/.github/workflows/issue-678-setup-java.yml
@@ -21,7 +21,6 @@ jobs:
           java --help
   test-docker-2:
     runs-on: ubuntu-latest
-    container: docker:cli
     steps:
       - name: Set up JDK
         uses: actions/setup-java@v4
@@ -30,8 +29,7 @@ jobs:
           java-version: 11
       - name: Execute Java
         run: |
-          cd /__t/Java_Zulu_jdk/11.0.25-9/x64/bin
-          ls
+          echo $JAVA_HOME
           echo $PATH
           printenv
   test-ubuntu:
