--- a/.github/workflows/issue-678-setup-java.yml
+++ b/.github/workflows/issue-678-setup-java.yml
@@ -21,6 +21,7 @@ jobs:
           java --help
   test-docker-2:
     runs-on: ubuntu-latest
+    container: docker:cli
     steps:
       - name: Set up JDK
         uses: actions/setup-java@v4
@@ -29,9 +30,8 @@ jobs:
           java-version: 11
       - name: Execute Java
         run: |
-          echo $JAVA_HOME
-          echo $PATH
-          printenv
+          cd /__t/Java_Zulu_jdk/11.0.25-9/x64/bin
+          ls
   test-ubuntu:
     runs-on: ubuntu-latest
     container: ubuntu:latest
