commented the crons

--- a/.github/workflows/issue-1132.yml
+++ b/.github/workflows/issue-1132.yml
@@ -1,8 +1,8 @@
 name: "Issue 1132"
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "12 3 * * *"  # arbitrary time not to DDOS GitHub
+  # schedule:
+  #   - cron: "12 3 * * *"  # arbitrary time not to DDOS GitHub
 permissions:
   pull-requests: write
 
