--- a/.github/workflows/issue-1135.yml
+++ b/.github/workflows/issue-1135.yml
@@ -2,8 +2,8 @@ name: 'Issue 1135'
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 0 * * *'
+  # schedule:
+  #   - cron: '0 0 * * *'
 
 permissions:
   issues: write
