changed file name

--- a/.github/workflows/issue-1182.yml
+++ b/.github/workflows/issue-1182.yml
@@ -1,9 +1,9 @@
-name: "Close stale issues and pull requests"
+name: "Issue 1182"
 on:
   workflow_dispatch:
     # schedule:
     #     - cron: "0 0 * * *"
-    
+
 jobs:
     stale:
         runs-on: ubuntu-latest
