--- a/.github/workflows/issue-1132.yml
+++ b/.github/workflows/issue-1132.yml
@@ -3,8 +3,8 @@ on:
   workflow_dispatch:
   # schedule:
   #   - cron: "12 3 * * *"  # arbitrary time not to DDOS GitHub
-permissions:
-  pull-requests: write
+# permissions:
+#   pull-requests: write
 
 jobs:
   stale:
