--- a/.github/workflows/dependabot-pr.yml
+++ b/.github/workflows/dependabot-pr.yml
@@ -4,6 +4,7 @@ on:
     # schedule:
     #     - cron: "0 0 * * *"
 permissions:
+  issues: write
   pull-requests: write
 jobs:
     stale:
@@ -13,6 +14,6 @@ jobs:
               with:
                   stale-issue-label: "stale"
                   stale-pr-label: "stale"
-                  days-before-stale: 2
-                  days-before-close: 2
+                  days-before-issue-stale: 2
+                  days-before-pr-stale: 2
                   any-of-labels: "question,discussion"
