--- a/.github/workflows/issue-1156.yml
+++ b/.github/workflows/issue-1156.yml
@@ -12,7 +12,9 @@ permissions:
 
 jobs:
   stale:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
+    container:
+      image: rockylinux/rockylinux:9
     steps:
       - uses: actions/stale@v9
         with:
