--- a/.github/workflows/issue-1156.yml
+++ b/.github/workflows/issue-1156.yml
@@ -9,12 +9,9 @@ permissions:
   issues: write
   pull-requests: write
 
-
 jobs:
   stale:
-    runs-on: ubuntu-latest
-    container:
-      image: rockylinux/rockylinux:9
+    runs-on: rocky
     steps:
       - uses: actions/stale@v9
         with:
