--- a/.github/workflows/issue-1156.yml
+++ b/.github/workflows/issue-1156.yml
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   stale:
-    runs-on: rocky
+     runs-on: [self-hosted, rocky]
     steps:
       - uses: actions/stale@v9
         with:
@@ -19,3 +19,5 @@ jobs:
           stale-pr-label: 'stale'
           labels-to-remove-when-unstale: 'stale'
           days-before-close: -1
+
+          # 'self-hosted', 'macOS', 'ARM64'
