--- a/.github/workflows/issue-1156.yml
+++ b/.github/workflows/issue-1156.yml
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   stale:
-    runs-on: [self-hosted, rocky]
+    runs-on: self-hosted
     steps:
       - uses: actions/stale@v9
         with:
