--- a/.github/workflows/actions/publish-immutable-action.yml
+++ b/.github/workflows/actions/publish-immutable-action.yml
@@ -1,6 +1,6 @@
 #actions/publish-immutable-action-0.0.4
 
-name: 'Close stale issues and PRs'
+name: 'Publish Immutable Action 0.0.4'
 on:
   workflow_dispatch:
 permissions:
