--- a/.github/workflows/stale-1184.yml
+++ b/.github/workflows/stale-1184.yml
@@ -13,7 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: Mark and close stale pull requests
+name: Stale Issue 1184
 
 on:
   # schedule:
