--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -13,23 +13,23 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: Stale Issue 1184
+name: Stale Issue aparnajyothi-y:upgrade-actions-cache-4.0.2
 
 on:
   # schedule:
   #   - cron: '30 3 * * *'    # Run at 3:30 UTC nightly
   workflow_dispatch:
-    inputs:
-      dryRun:
-        description: 'Dry run'
-        required: true
-        default: true
-        type: boolean
-      operationsPerRun:
-        description: 'Max GitHub API operations'
-        required: true
-        default: 30
-        type: number
+    # inputs:
+    #   dryRun:
+    #     description: 'Dry run'
+    #     required: true
+    #     default: true
+    #     type: boolean
+    #   operationsPerRun:
+    #     description: 'Max GitHub API operations'
+    #     required: true
+    #     default: 30
+    #     type: number
 
 permissions: read-all
 jobs:
@@ -49,6 +49,6 @@ jobs:
         days-before-pr-close: 90
         days-before-issue-close: -1
         days-before-issue-stale: -1
-        exempt-pr-labels: "pinned"
-        debug-only: ${{ inputs.dryRun || false }}
+        # exempt-pr-labels: "pinned"
+        # debug-only: ${{ inputs.dryRun || false }}
         operations-per-run: 100
