--- a/.github/workflows/stale-1227.yml
+++ b/.github/workflows/stale-1227.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - uses: actions/stale@v9
         with:
-          repo-token: ${{secrets.STALE_TOKEN}}
+          repo-token: ${{ secrets.REPO_TOKEN }}
           operations-per-run: 100 # This should be temporary.
           days-before-issue-stale: 70
           stale-issue-message: >
