--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -1,54 +1,45 @@
-# Licensed to the Apache Software Foundation (ASF) under one or more
-# contributor license agreements.  See the NOTICE file distributed with
-# this work for additional information regarding copyright ownership.
-# The ASF licenses this file to You under the Apache License, Version 2.0
-# (the "License"); you may not use this file except in compliance with
-# the License.  You may obtain a copy of the License at
 #
-#     http://www.apache.org/licenses/LICENSE-2.0
+# Copyright the original author or authors from the JHipster project.
+#
+# This file is part of the JHipster project, see https://www.jhipster.tech/
+# for more information.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#      https://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing, software
 # distributed under the License is distributed on an "AS IS" BASIS,
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+#
 
-name: Stale Issue 1231
-
+name: 'Issue 1131'
 on:
-  # schedule:
-  #   - cron: '30 3 * * *'    # Run at 3:30 UTC nightly
-  workflow_dispatch:
-    # inputs:
-    #   dryRun:
-    #     description: 'Dry run'
-    #     required: true
-    #     default: true
-    #     type: boolean
-    #   operationsPerRun:
-    #     description: 'Max GitHub API operations'
-    #     required: true
-    #     default: 30
-    #     type: number
-
-permissions: read-all
+  schedule:
+    - cron: '0 0 * * *'
+permissions:
+  issues: write
+  pull-requests: write
 jobs:
   stale:
     runs-on: ubuntu-latest
-    permissions:
-      issues: write
-      pull-requests: write
     steps:
-    - uses: actions/stale@main
-      with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        stale-pr-message: 'This pull request has been marked as stale due to 30 days of inactivity. It will be closed in 90 days if no further activity occurs. If you think that’s incorrect or this pull request requires a review, please simply write any comment. If closed, you can revive the PR at any time and @mention a reviewer or discuss it on the dev@calcite.apache.org list. Thank you for your contributions.'
-        close-pr-message: 'This pull request has been closed due to lack of activity. If you think that is incorrect, or the pull request requires review, you can revive the PR at any time.'
-        stale-pr-label: 'stale'
-        days-before-pr-stale: 3
-        days-before-pr-close: 90
-        days-before-issue-close: 90
-        days-before-issue-stale: 90
-        # exempt-pr-labels: "pinned"
-        # debug-only: ${{ inputs.dryRun || false }}
-        operations-per-run: 100
+      - uses: actions/stale@v9
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          ascending: true
+          stale-issue-label: 'area: stale'
+          stale-issue-message: |
+            This issue is stale because it has been open for too long without any activity.
+            Due to the moving nature of jhipster generated application, bugs can become invalid.
+            If this issue still applies please comment otherwise it will be closed in 7 days
+          days-before-issue-stale: 180
+          days-before-pr-stale: 360
+          days-before-close: 7
+          #exempt-issue-labels: 'area: bug :bug:,status: work in progress,$$ bug-bounty $$'
+          exempt-pr-labels: 'pr: bug-fix,status: work in progress'
+          operations-per-run: 60
