--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -19,8 +19,9 @@
 
 name: 'Issue 1131'
 on:
-  schedule:
-    - cron: '0 0 * * *'
+  # schedule:
+  #   - cron: '0 0 * * *'
+  workflow_dispatch:
 permissions:
   issues: write
   pull-requests: write
