--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -20,7 +20,7 @@
 name: 'Issue 1131'
 on:
   # schedule:
-  #   - cron: '0 0 * * *'
+  # - cron: '0 0 * * *'
   workflow_dispatch:
 permissions:
   issues: write
@@ -29,7 +29,7 @@ jobs:
   stale:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/stale@v9
+      - uses: suyashgaonkar/stale@sort_issues_by
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           ascending: true
@@ -41,6 +41,7 @@ jobs:
           days-before-issue-stale: 180
           days-before-pr-stale: 360
           days-before-close: 7
+          sort-issues-by: 'created'
           #exempt-issue-labels: 'area: bug :bug:,status: work in progress,$$ bug-bounty $$'
           exempt-pr-labels: 'pr: bug-fix,status: work in progress'
           operations-per-run: 60
